// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-13848.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 */
/**
 */
declare opaque type Type: string;

/* ! DON'T add code before comment */

=====================================output=====================================
/**
 */
/**
 */
declare opaque type Type: string;

/* ! DON'T add code before comment */

================================================================================
`;

exports[`issue-13848-2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 */
/**
 */
declare opaque type Type1: string;
declare opaque type Type2: string;

/* ! DON'T add code before comment */

=====================================output=====================================
/**
 */
/**
 */
declare opaque type Type1: string;
declare opaque type Type2: string;

/* ! DON'T add code before comment */

================================================================================
`;
